--- a/git2/css/style.css
+++ b/git2/css/style.css
@@ -18,7 +18,7 @@
     width: 620px;
     height: 500px;
     margin-bottom: 50px;
-    background: #ff0;
+    background: #fc9;
     float: left;
 }
 
